Fix #31318: cycles preview missing update for other materials using same node group with certain operations.